Finish skeleton UVM testbench, formatting issues, Vivado elaboration error persists
pip_seq_item already declared despite only declaration in project
```
ERROR: [VRFC 10-2989] 'pip_env' is not declared [C:/Users/Stefan/Documents/GitHub/riscv/sim/pipeline/pip_test.sv:23]
ERROR: [VRFC 10-2989] 'pip_seq' is not declared [C:/Users/Stefan/Documents/GitHub/riscv/sim/pipeline/pip_test.sv:24]
```

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,10 @@
 # disabled extensions
-.log
+*.log
+!*.xpr
+# Vivado-specific directories that are auto-generated when running simulation/elaboration/sysnthesis
+**/xsim/**
+**/vivado_riscv/**
 
 # disabled specific files
 doc/SBucur_riscv_designdoc.docx
+*_testtb.sv
